<resources>
    <string name="app_name">Cafe SKU</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">GJQkZoyB7BBFUs1Cw2ns88Z59gkjrZSxHnaVZgEW</string>
    <string name="back4app_client_key">m55HSPhvy33NaPmE80954eT1EPQke0VyzwBauXqp</string>
    <string name="todo">TODO</string>
    <string name="homeTitle"> </string>
    <string name="newsTitle">خبرنامه</string>
    <string name="profileTitle">حساب من</string>
    <string name="aboutUniTitle">دانشگاه شهرکرد</string>
    <string name="toolsTitle">ابزار کمکی</string>
    <string name="homeDetailTitle">اطلاعات بیشتر</string>
    <string-array name="signUpDYearList">
        <item>99</item>
        <item>98</item>
        <item>97</item>
        <item>96</item>
        <item>95</item>
        <item>94</item>
        <item>93</item>
        <item>92</item>
        <item>91</item>
        <item>90</item>
    </string-array>
    <string-array name="signUpDaneshkadeList">
        <item>دانشکده فنی مهندسی</item>
        <item>دانشکده منابع طبیعی و علوم زمین</item>
        <item>دانشکده علوم ریاضی</item>
        <item>دانشکده علوم پایه</item>
        <item>دانشکده دامپزشکی</item>
        <item>دانشکده کشاورزی</item>
        <item>دانشکده ادبیات و علوم انسانی</item>
        <item>دانشکده هنر فارسان</item>
        <item>دانشکده فنی مهندسی بروجن</item>
    </string-array>
    <string-array name="signUpReshteFaniMohandesi">
        <item>مهندسی کامپیوتر</item>
        <item>مهندسی برق</item>
        <item>مهندسی عمران</item>
        <item>مهندسی عمران</item>
        <item>مهندسی مواد و متالوژی</item>
    </string-array>
    <string-array name="signUpReshteOloomTabiiiOlomZamin">
        <item>شیلات</item>
        <item>مهندسی طبیعت</item>
        <item>علوم جنگل</item>
        <item>مهندسی محیط زیست</item>
    </string-array>
    <string-array name="signUpReshteOloomRiazi">
        <item>ریاضی کاربردی</item>
        <item>ریاضی محض</item>
        <item>علوم کامپیوتر</item>
    </string-array>
    <string-array name="signUpReshteOloomPaye">
        <item>زیست شناسی</item>
        <item>ژنتیک</item>
        <item>شیمی</item>
        <item>فیزیک</item>
    </string-array>
    <string-array name="signUpReshteDampezeshki">
        <item>بهداشت و کنترل کیفی مواد غذایی</item>
        <item>پاتوبیولوژی</item>
        <item>علوم پایه</item>
        <item>علوم درمانگاهی</item>
    </string-array>
    <string-array name="signUpReshteKeshavarzi">
        <item>مهندسی آب</item>
        <item>اصلاح نباتات و بیوتکنولوژی</item>
        <item>علوم باغبانی</item>
        <item>خاک شناسی</item>
        <item>زراعت</item>
        <item>علوم دامی</item>
        <item>گیاه پزشکی</item>
        <item>مهندسی مکانیک بیوسیستم</item>
    </string-array>
    <string-array name="signUpReshteAdabiat">
        <item>گروه معارف اسلامی</item>
        <item>گروه زبان و ادبیات فارسی</item>
        <item>گروه مشاوره و راهنمایی</item>
        <item>گروه ادیان و عرفان تطبیقی</item>
        <item>گروه باستان شناسی</item>
        <item>گروه علوم ورزشی</item>
        <item>گروه حقوق</item>
        <item>گروه زبان های خارجی</item>
        <item>گروه علوم قرآن و حدیث</item>
        <item>گروه مدیریت جهانگردی</item>
    </string-array>
    <string-array name="signUpReshteHonarFarsan">
        <item>صنایع دستی</item>
        <item>فرش</item>
        <item>فقه و حقوق اسلامی</item>
    </string-array>
    <string-array name="signUpReshteFaniBorojen">
        <item>مهندسی مواد و متالوژی</item>
    </string-array>
    <string name="title_activity_test">test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="det1">واقعا یکی از سخت ترین کارهای ممکن فکر کردن به چیزهاییست که هر روز میبینیمشان ، لمسشان میکنیم و بی اعتنا از کنار آن میگزریم.
و سخت تر آنکه حال بخواهیم از آنها چیز هایی را نیز به قلم آوریم.
چیزهایی که از بس دیدیم و شنیده ایم دیگر برای ما جذاب نیستند ولی تا بخواهی نیازمند اندیشه اند، نیازمند تفکر تا عصاره ی خود را به ما تقدیم کنند.
آنچه که بین دانشجویان میگزرد یا به اصطلاح خودمان آنچه که بین ما میگزرد یک دنیا تجربه ی نابیست که سخت در دوران دیگر خواهیم دید . و طعم نابی که تا آخر عمر مزه اش را از یاد نخواهیم برد.
جمع هایی که انرژی شان غیر قابل سنجش است و صمیمیتشان از کتاب قصه های کودکانه نیز بیشترند.
گاهی این دوران مقدمه ای می شود برای 70 80 سال رفاقت و یا چکیده ای تجربیات سودمندی که در صفحه ای از دفتر زندگیمان تحریر میشوند.
بچه هایی که چه صادقانه کنار هم اجتماعی تر می شوند و یاد میگیرند که در رفاقت خیلی بار هارا باید به دوش بکشند و در عین حال هم به خیلی ها باید نه بگویند .
خوابگاه هایی که بعد از غروب خورشید چه غمناک می شود و غبار دلتنگی روی تمام سینه ها می نشیند و شبنم های زلالی که به یاد مادر به یاد پدر و گاهی به یاد دیار در غربت شکل میگیرد ولی باز هم بین خودشان میماند. و بین خودشان درد و دل میشود.
و چه شبهایی که همه بیدارند و به سقف اتاق خیره شده رویاهای آیندشان را میچینند.
و دوباره فردا سرحال تر از همیشه باهم برای ساختن آینده راهی می شوند.
ولی گاهی شب ها تفاوت دارد ، شبهای امتحان همه بیدارند و بلا استثنا خوشحال اند و زیاد میخندند.
البته عده ای از این خوشحالند که همه چیز را یاد دارند و فردا نمره ی خوبی خواهند گرفت ولی عموما اینطور نیست و آنهایی که زیاد میخندند فردا کمتر میگیرند ولی به هرحال این را به اطمینان میگویم که دفعه های بعد بهتر عمل خواهند کرد به هرحال در شب امتحان خیلی ها  به دامان گروه اول می افتند گاه می شود که ساعت ها و روزها یکی برای دیگری درس را دوباره توضیح میدهد و آخر هم با یک دستت درد نکند مزدش را میگیرد و راضی میشود .
و در آخر فقط اینکه آنچه که بین دانشجویان میگذرد شاید از بیرون چیز بزرگی به نظر نیاید ولی این فقط دانشجویان هستند که این دوران را به گونه ی صحیح احساس میکنند و بهترین خاطراتشان را از آن به یادگار می برند 😊
</string>
    <string name="det2">گام آغازین جهت ایجاد دانشگاه شهرکرد در خردادماه سال ۱۳۵۶ با تأسیس دانشکده‌ی دامپروری شهرکرد در یک ساختمان استیجاری واقع در میدان دانشگاه برداشته شد. با پایان یافتن انقلاب فرهنگی و بازگشایی دانشگاه‌ها در سال ۱۳۶۲، دانشکده‌ی دامپروری به آموزشکده‌ی کشاورزی تبدیل شد و به‌عنوان زیر مجموعه‌ی ای از دانشگاه صنعتی اصفهان با پذیرش ۳۰ دانشجو در دو رشته‌ی امور زراعی و امور دامی در مقطع کاردانی به کار خود ادامه داد. در سال ۱۳۶۷ آموزشکده کشاورزی به مجتمع آموزش عالی ارتقاء یافت و در تاریخ ۱۶ دی‌ماه ۱۳۷۰ با موافقت شورای گسترش آموزش عالی کشور مجتمع آموزش عالی شهرکرد به "دانشگاه شهرکرد" تبدیل شد. فضاهای آموزشی، کمک آموزشی و رفاهی موجود در دانشگاه بالغ بر ۱۴۷۰۰۰ متر مربع بوده و ۴۰۰۰۰ متر مربع نیز در دست احداث می‌باشد. دانشگاه شهرکرد در حال حاضر دارای ۳۳۰ عضو هیأت علمی، بیش از ۳۰۰ کارمند، بیش از ۷ هزار دانشجو و ۴۹ رشته در مقطع کارشناسی، ۷۹ رشته کارشناسی ارشد ، ۳۶  رشته دکتری تخصصی و ۱ رشته دکتری حرفه‌ای می‌باشد. در حال حاضر دانشگاه دارای ۸ دانشکده (فنی و مهندسی، ادبیات و علوم‌انسانی،علوم پایه، ریاضی، دامپزشکی، کشاورزی، منابع طبیعی و علوم زمین، علوم انسانی و هنر فارسان) ، ۶ پژوهشکده (فناوری جنین دام، زیست فناوری، بیماریهای مشترک انسان و دام، مرکز رشد، مرکز تحقیقات منابع آب و نانو) می‌باشد. همچنین در سال ۱۳۹۵ مرکز شتابدهی  نوآوری و مرکزتخصصی آپا(آگاهی رسانی، پشتیبانی و امدادرسانی) در دانشگاه راه‌اندازی گردید.
دانشگاه شهرکرد در سال ۲۰۱۷ میلادی برای اولین بار در فهرست یک درصد دانشگاه‌های برتر جهان و هم چنین در زمره دانشگاه‌های موثر مهندسی جهان قرار گرفت و به لحاظ تولید بیشترین مقالات یک درصد برتر ISI  در میان دانشگاه‌های جامع کشور موفق به کسب رتبه ۱۸ گردید. این دانشگاه از سال ۱۳۹۶ شروع به جذب دانشجویان خارجی در رشته‌های ادبیات و علوم انسانی و حقوق کرده است.
با توجهات و تدابیر دولت محترم و برنامه‌ریزی‌های منسجم و تلاش همه‌جانبه مجموعه دانشگاه شهرکرد، این دانشگاه توانسته است در عرصه‌های مختلف موفقیت‌های بزرگی به دست آورد و خود را به‌عنوان یکی از دانشگاه‌های موفق به عرصه آموزش عالی کشور معرفی کند.
</string>
    <string name="det3">شهرکرد دارای اقلیم نیمه مرطوب معتدل با تابستانهای معتدل و زمستانهای بسیار سرد می‌باشد.میانگین سالانه دمای هوادر شهرکرد ۱۱/۵ درجه سانتیگراد می باشد.در طول ۳۰ سال گذشته حداقل مطلق دما و حداکثر مطلق دمای ثبت شده در شهرکرد به ترتیب ۳۲ درجه سانتیگراد زیر صفر و ۴۲ درجه سانتیگراد بوده است. سردترین و گرمترین ماه‌های شهرکرد به ترتیب دی و مرداد می‌باشد. اگرچه در زمستان میزان رطوبت متوسط تا بالا است، میزان بارش در فصولی که کشت صورت می‌گیرد به جز ماههای اردیبهشت و فروردین تقریبا به صفر نزدیک است. سردترین ماه و گرمترین آن به ترتیب دی و مرداد می‌باشد.</string>
    <string name="det4">این دانشگاه توانسته است در عرصه های مختلف موفقیت های بزرگی به دست آورده و خود را به عنوان یکی از دانشگاه های موفق به عرصه آموزش عالی کشور معرفی کند. که از این توفیقات می توان به توفیق میزبانی و تدفین ۵ شهید گمنام در دانشگاه شهرکرد اشاره کرد.
 همچنین کسب رتبه ششم دانشگاه های کشور در سرانه تعداد طرحهای پژوهشی درون دانشگاهی، کسب رتبه هفتم دانشگاه های کشور در سرانه مقاله های نمایه شده در ISI به ازای هر پژوهشگر و کسب رتبه یازدهم سرانه دستاوردهای علمی- پژوهشی در بین دانشگاه های سراسر کشور در حوزه پژوهشی می¬باشد.
کسب مدال طلای آسیایی از اولین نمایشگاه و جشنواره اختراعات و ابتکارات ایده های برتر، کسب رتبه دوم جشنواره شیخ بهایی، کسب رتبه سوم جشنواره ملی جوان ایرانی، کسب مدال طلای المپیاد جهانی اختراعات نانو الکترونیک کره جنوبی، کسب رتبه اول جشنواره جوان ایرانی در بخش کشاورزی در بزرگترین نمایشگاه فناوری اطلاعات و ارتباطات جهان CEBIT به عنوان یکی از سه نماینده رسمی و علمی ایران، از افتخارات به دست آمده توسط واحدهای فناور مرکز رشد واحدهای فناوری دانشگاه شهرکرد است.
 نسبت بیش از ۹۵ درصدی استادیار و بالاتر اعضای هیات علمی، توسعه چشمگیر رشته های تحصیلات تکمیلی و سهم ۷۰ درصدی رشته های تحصیلات تکمیلی از مجموع رشته های تحصیلی دانشگاه شهرکرد ، قبولی بیش از ۷۹ درصد دانش آموختگان مقطع کارشناسی نسبت به دانش آموختگان همان سال دانشگاه در آزمون سراسری کارشناسی ارشد سال ۹۰ و کسب رتبه ۱۷ کشور در قبولی دانش آموختگان کارشناسی ارشد در مقطع دکتری تخصصی، کسب رتبه دوم قبولی کارشناسی ارشد دربین دانشگاههای کشورتوسط دانشکده علوم ریاضی دانشگاه شهرکرد در آزمون سراسری کارشناسی ارشد سال ۹۱، کسب رتبه برتر توسط ده نفر از دانشجویان دانشگاه در المپیاد دانشجویی کشور و رتبه چهارم کشور درجذب عضو هیات علمی با درجه دکتری از جمله افتخارات این دانشگاه در حوزه آموزشی است.
 انتخاب کرسی آزاداندیشی دانشگاه شهرکرد به عنوان کرسی آزاداندیشی برتر دانشگاه های کشور، کسب رتبه ۴ دانشگاه های بزرگ در فعالیت های فرهنگی، کسب رتبه دوم منطقه ۴ کشور در ارزیابی عملکرد حوزه فرهنگی دانشگاه ها، کسب عناوین برتر سه دوره جشنواره ملی حرکت(دستاورد های انجمن های علمی)، کسب رتبه برتر منطقه ۴ کشور در جشنواره ملی رویش(دستاوردهای کانون های فرهنگی) و کسب عناوین برتر جشنواره های مختلف کشوری و استانی نشریات توسط نشریات دانشجویی،از  افتخارات دانشگاه شهرکرد در حوزه فعالیت های فرهنگی است.
کسب ۲ عنوان نمونه کشوری در کیفیت خوابگاه های دانشجویی، انتخاب به عنوان دانشگاه برتر در زمینه های سرانه فضای استاندارد هر فرد در خوابگاه و تنوع برنامه غذایی، قهرمانی و کسب عناوین برتر بسیاری از مسابقات ورزشی منطقه ای و کشوری و راهیابی به المپیاد ورزشی دانشجویان توسط تیم های ورزشی دانشگاه،کسب عنوان مرکز مشاوره دانشجویی فعال دانشگاه های سراسر کشور به انتخاب دفتر مرکزی مشاوره وزارت علوم در سال های ۹۰ و۹۱ و دبیر نمونه ی منطقه در سال ۹۱ و رشد ۷۵درصدی تسهیلات اعطایی به دانشجویان دانشگاه شهرکرد در سال تحصیلی ۹۲-۹۱، از افتخارات بدست آمده در حوزه معاونت دانشجویی دانشگاه است.
از افتخارات دیگر دانشگاه می¬توان به اخذ اعتبار علمی – پژوهشی از وزارت علوم، تحقیقات و فناوری برای مجله پژوهش آب ایران، کسب رتبه پنجم طرح های برون سازمانی فنی و مهندسی کشور و کسب رتبه دوم سرانه درآمد پژوهشی جذب شده نسبت به پژوهشگر در بین پژوهشکده ها و مراکز تحقیقاتی کشور توسط مرکز تحقیقات منابع آب، تولید آزمایشگاهی جنین گوسفند و تولد اولین بره سالم در کشور از طریق لقاح خارج رحمی، همچنین تولید جنین های شبیه سازی شده گوسفند توسط پژوهشکده فناوری جنین دام ، اشاره کرد.
</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>